# catkin_ws

./: README.md
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/lib/: libchomp_motion_planner.so.1.0.11  libchomp_planner_plugin.so.1.0.11  libcollision_detector_fcl_plugin.so.1.0.11  libmoveit_background_processing.so.1.0.11  libmoveit_cached_ik_kinematics_base.so.1.0.11  libmoveit_cached_ik_kinematics_plugin.so.1.0.11  libmoveit_chomp_optimizer_adapter.so.1.0.11  libmoveit_collision_detection.so.1.0.11  libmoveit_collision_detection_fcl.so.1.0.11  libmoveit_collision_distance_field.so.1.0.11  libmoveit_collision_plugin_loader.so.1.0.11  libmoveit_common_planning_interface_objects.so.1.0.11  libmoveit_constraint_sampler_manager_loader.so.1.0.11  libmoveit_constraint_samplers.so.1.0.11  libmoveit_controller_manager_example.so.1.0.11  libmoveit_cpp.so.1.0.11  libmoveit_default_planning_request_adapter_plugins.so.1.0.11  libmoveit_depth_image_octomap_updater.so.1.0.11  libmoveit_depth_image_octomap_updater_core.so.1.0.11  libmoveit_depth_self_filter.so.1.0.11  libmoveit_distance_field.so.1.0.11  libmoveit_dynamics_solver.so.1.0.11  libmoveit_exceptions.so.1.0.11  libmoveit_fake_controller_manager.so.1.0.11  libmoveit_kdl_kinematics_plugin.so.1.0.11  libmoveit_kinematic_constraints.so.1.0.11  libmoveit_kinematics_base.so.1.0.11  (+60 more)
src/: .rosinstall  .rosinstall.bak
src/grasp_gazebo/: CMakeLists.txt
src/grasp_gazebo/launch/: my_obstacle_avoidance_demo.launch
src/grasp_gazebo/src/: grasp.cpp
(+583 files in other folders)
